--- a/index.html
+++ b/index.html
@@ -8,31 +8,31 @@
         <h1>Midterm</h1>
         <ul>
         <li>
-            <a href="https://codepen.io/naiviv/pen/JxajJX">2 Columns</a>
+            <a href="https://codepen.io/naiviv/pen/JxajJX" target=_blank>2 Columns</a>
         </li>
 
         <li>
-            <a href="https://codepen.io/naiviv/pen/GzXRXx">Using Classes</a>
+            <a href="https://codepen.io/naiviv/pen/GzXRXx" target=_blank>Using Classes</a>
         </li> 
 
         <li>
-            <a href="https://codepen.io/naiviv/pen/rPZNge">Background Images</a>
+            <a href="https://codepen.io/naiviv/pen/rPZNge" target=_blank>Background Images</a>
         </li>
 
         <li>
-        <a href="https://codepen.io/naiviv/pen/LqJYoj">Converting Font Sizes To Relative Units</a>
+        <a href="https://codepen.io/naiviv/pen/LqJYoj" target=_blank>Converting Font Sizes To Relative Units</a>
         </li>  
 
         <li>
-        <a href="https://codepen.io/naiviv/pen/OdoJKa">Inline Elements</a>
+        <a href="https://codepen.io/naiviv/pen/OdoJKa" target=_blank>Inline Elements</a>
         </li>
 
         <li>
-        <a href="https://codepen.io/naiviv/pen/XOPJJj">Specificity Challenge</a>
+        <a href="https://codepen.io/naiviv/pen/XOPJJj" target=_blank>Specificity Challenge</a>
         </li>  
 
         <li>
-        <a href="https://codepen.io/naiviv/pen/pGOvNj">Class Stuff</a>
+        <a href="https://codepen.io/naiviv/pen/pGOvNj" target=_blank>Class Stuff</a>
         </li> 
 
       </ul>
