--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
          <title>Midterm|Naiviv</title> 
         <link rel="stylesheet" href="css/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat|Ultra" rel="stylesheet">
     </head>
 
     <body>
